<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".http.VolleyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/get_btn"
            android:onClick="OnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"/>
        <Button
            android:id="@+id/put_btn"
            android:onClick="OnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put"/>
        <Button
            android:id="@+id/getjson_btn"
            android:onClick="OnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getJson"/>
        <Button
            android:id="@+id/clear_btn"
            android:onClick="OnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>
